fix overflow, scroll when away from screen

--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -7,7 +7,6 @@
 
 body {
   @apply bg-base-100;
-  padding: 1rem;
   height: 100vh;
 }
 
